--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <script src="js/wobbly.js"></script>
 <title>main</title>
 <head>
-    <link rel="stylesheet" href="page.css">
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="stylesheet" href="/page.css">
+    <link rel="shortcut icon" href="/favicon.ico">
 </head>
 <div id="header-full" style="display: block;"></div>
 <div id="navbar-full" style="display: block;">
-    <script src="js/navdiv.js"></script>
+    <script src="/js/navdiv.js"></script>
 </div>
 <div id="main-container">
     <div class="content-wrap flex alignment">
